--- a/.github/workflows/android-apk.yml
+++ b/.github/workflows/android-apk.yml
@@ -35,26 +35,30 @@ jobs:
       - name: Generate Android native project
         run: npx expo prebuild --platform android --non-interactive
 
-      - name: Build debug APK
+      - name: Build release APK (standalone)
         run: |
           cd android
           chmod +x gradlew
-          ./gradlew app:assembleDebug --no-daemon
+          ./gradlew app:assembleRelease --no-daemon
 
       - name: Rename APK
         run: |
-          cp android/app/build/outputs/apk/debug/app-debug.apk android/app/build/outputs/apk/debug/rushlab-neonbuddy-debug.apk
+          if [ -f android/app/build/outputs/apk/release/app-release.apk ]; then
+            cp android/app/build/outputs/apk/release/app-release.apk android/app/build/outputs/apk/release/rushlab-neonbuddy-release.apk
+          else
+            cp android/app/build/outputs/apk/release/app-release-unsigned.apk android/app/build/outputs/apk/release/rushlab-neonbuddy-release.apk
+          fi
 
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
-          name: rushlab-neonbuddy-debug-apk
-          path: android/app/build/outputs/apk/debug/rushlab-neonbuddy-debug.apk
+          name: rushlab-neonbuddy-release-apk
+          path: android/app/build/outputs/apk/release/rushlab-neonbuddy-release.apk
           if-no-files-found: error
 
       - name: Publish GitHub Release asset
         if: startsWith(github.ref, 'refs/tags/v')
         uses: softprops/action-gh-release@v2
         with:
-          files: android/app/build/outputs/apk/debug/rushlab-neonbuddy-debug.apk
+          files: android/app/build/outputs/apk/release/rushlab-neonbuddy-release.apk
           generate_release_notes: true
